improved home page

--- a/index.html
+++ b/index.html
@@ -36,59 +36,96 @@
 
 <div class="main">
 <div class="container">
-
   <div class="row cv-overview" id="cv">
-
-    <div class="col-md-4">
+    <div class="col-md-3 col-md-offset-1">
       <img src="test2.jpg" class="cv-overview-image">
-    </div>
-
-    <div class="col-md-7 .col-md-offset-1">
-      <h1>CTO + full stack geek &nbsp;&nbsp; @ Grand Luxury Group.</h1>
-      <p><strong>Premier salarié et unique dev pendant 5 ans &bull; Conception et réalisation de la platorme technique de la société &bull;
-        Optimisation des performances et du taux de transformation &bull;
-        Product Owner et référent métier.</strong></p>
-
-      <p><a id="glg-details" tabindex="0" role="button" title="Grand Luxury Group">Grand Luxury Group</a>
-        propose la réservation de 450 hôtels d'exception à travers le monde. En 10 ans, et en s'appuyant sur sa plateforme technique, il est devenu le 2<sup>ème</sup> apporteur d'affaires mondial pour les hôtels de Paris, Londres et Milan &mdash; avec seulement 45 salariés.</p>
-
-      <p><strong>Aujourd'hui je dirige l'équipe R&D et définis la stratégie tech de l'entreprise, sans jamais avoir abandonné mon rôle de développeur web full-stack.</strong></p>
+    </div>    
+    <div class="col-md-7">
+      <h1>CTO + full stack geek &nbsp;&nbsp; @Grand Luxury Group.</h1>
+      <p>Premier salarié chez <a href="#" data-toggle="modal" data-target="#glg-details">Grand Luxury Group</a> et unique dev pendant 5 ans &bull; Conception et réalisation de la platorme technique de la société &bull;
+        Optimisation des performances et du taux de conversion &bull;
+        Product Owner et référent métier.</p>
+      <p><strong>Aujourd'hui je dirige l'équipe R&amp;D et définis la stratégie tech de l'entreprise, sans jamais avoir abandonné mon rôle de développeur web full-stack.</strong></p>
 
       <div class="cv-contact-cta">
-        <p>Je cherche à élargir mes horizons et relever d'autres défis dans une nouvelle structure.<br />
-        Echangeons ensemble et voyons comment je peux contribuer à la réussite de vos projets ! </p>
-
+        <!-- <p>Je cherche à élargir mes horizons et relever d'autres défis dans une nouvelle structure.<br />
+        Echangeons ensemble et voyons comment je peux contribuer à la réussite de vos projets ! </p>-->
+  
         <p><a href="" class="btn btn-primary btn-arrow" data-toggle="modal" data-target="#contact-modal"><span>Me contacter</span></a>
-          <a class="btn btn-default" href="">Télécharger mon CV</a>
+          <a class="btn btn-default" href="cv.pdf">Télécharger mon CV</a>
           <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
         </p>
       </div>
-
     </div>
   </div>
-
-  <h2>Comprendre, concevoir et délivrer le produit, puis l’optimiser en continu</h2>
-  <p>Je place chacun des projets au coeur d'un cercle vertueux : </p>
-  <ul>
-    <li>comprendre et reformuler les besoins en travaillant étroitement avec les porteurs de projets</li>
-    <li>concevoir un produit attractif, efficace et moderne grâce aux technos les plus récentes</li>
-    <li>délivrer le produit avec le meilleur compromis coût/qualité</li>
-    <li>multiplier le ROI en analysant les usages et en améliorant en continu</li>
-    <li>accélérer le cycle en constituant une équipe projet efficace, passionnée, et ambitieuse</li>
-  </ul>
-
-  <h3>Ma trousse à outils :</h3>
-  <p class="cv-techs">Dev  : <span>Symfony 3</span> <span>Angular (1 et 2+)</span> <span>PHP 7</span> <span>Javascript/ES2016</span> <span>Typescript</span> <span>HTML5 + CSS3</span> <span>Ionic + Cordova</span> et plus.</p>
-  <p class="cv-techs">Ops : <span>Docker</span> <span>Debian</span> <span>Apache</span> <span>MySQL</span> <span>Jenkins</span> <span>Gitlab + Gitlab CI</span> <span>NewRelic</span></p>
-  <p class="cv-techs">Savoir-faire : <span>RESTful APIs</span> <span><abbr title="Conversion Rate Optimization">CRO</abbr></span> <span><abbr title="Search Engine Optimisation">SEO</abbr></span> <span>Caching et CDN</span> <span><abbr title="Single Page Applications, Progressive Web Apps">SPAs et PWAs</abbr></span> <span>Paiement en ligne</span> <span>Test</span> <span>Scrum et agilité</span></p>
-  <p class="cv-techs">Métiers : <span>Architecte</span> <span>UX Design</span> <span>Manager in-house/offshore</span> <span>Product Owner</span> <span>Scrum Master</span> <span>Recruteur</span></p>
-
-  <p><a href="" class="btn btn-primary">Me contacter</a>
-    <a class="btn btn-default" href="">Télécharger mon CV</a>
-    <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
-  </p>
-
 </div>
+
+<div class="jumbotron cv-details">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Le web à 360 degrés</h2>
+      <p>Mon profil hybride me permet de <strong>mettre les technologies les plus performantes au service
+        de la création de valeur et du succès d'un produit</strong>.</p>
+        Ma méthode :</p>
+      <ul>
+        <li>comprendre et reformuler les besoins en travaillant étroitement avec les porteurs de projets</li>
+        <li>concevoir un produit attractif, efficace et moderne grâce aux technos les plus récentes</li>
+        <li>délivrer le produit avec le meilleur compromis coût/qualité, en tenant compte de l'évolution à long terme</li>
+        <li>multiplier le ROI en analysant les usages et en améliorant en continu</li>
+        <li>accélérer le cycle en constituant une équipe projet efficace, passionnée, et ambitieuse</li>
+      </ul>
+    
+      <h3>Ma trousse à outils :</h3>
+      <p class="cv-techs">Dev  : <span>Symfony 3</span> <span>Angular (1 et 2+)</span> <span>PHP 7</span> <span>Javascript/ES2016</span> <span>Typescript</span> <span>HTML5 + CSS3</span> <span>Ionic + Cordova</span> et plus.</p>
+      <p class="cv-techs">Ops : <span>Docker</span> <span>Debian</span> <span>Apache</span> <span>MySQL</span> <span>Jenkins</span> <span>Gitlab + Gitlab CI</span> <span>NewRelic</span></p>
+      <p class="cv-techs">Savoir-faire : <span>RESTful APIs</span> <span><abbr title="Conversion Rate Optimization">CRO</abbr></span> <span><abbr title="Search Engine Optimisation">SEO</abbr></span> <span>Caching et CDN</span> <span><abbr title="Single Page Applications, Progressive Web Apps">SPAs et PWAs</abbr></span> <span>Paiement en ligne</span> <span>Test</span> <span>Scrum et agilité</span></p>
+      <p class="cv-techs">Métiers : <span>Architecte</span> <span>UX Design</span> <span>Manager in-house/offshore</span> <span>Product Owner</span> <span>Scrum Master</span> <span>Recruteur</span></p>
+
+      <div class="cv-contact-cta">
+          <!-- <p>Je cherche à élargir mes horizons et relever d'autres défis dans une nouvelle structure.<br />
+          Echangeons ensemble et voyons comment je peux contribuer à la réussite de vos projets ! </p>-->
+    
+          <p><a href="" class="btn btn-primary btn-arrow" data-toggle="modal" data-target="#contact-modal"><span>Me contacter</span></a>
+            <a class="btn btn-default" href="">Télécharger mon CV</a>
+            <a class="btn btn-default" href="https://www.linkedin.com/in/mickaelmarchal/">Profil LinkedIn</a>
+          </p>
+        </div>
+  
+    </div>
+  </div>
+</div>
+</div>
+
+
+  <div class="modal fade" tabindex="-1" role="dialog" id="glg-details">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h3 class="modal-title">Grand Luxury Group</h3>
+          </div>
+          <div class="modal-body">
+            <p>Crée en 2007, Grand Luxury Group est le spécialiste européen du voyage de luxe sur internet :
+              La société propose la réservation de 450 hôtels d'exception à travers le monde.</p>
+            <ul>
+              <li>Les plus beaux hôtels du monde, triés sur le volet.</li>
+              <li>Un service personnalisé via un conseiller dédié.</li>
+              <li>Des avantages exclusifs pour les membres du L Club.</li>
+              <li>Un suivi attentif de chaque client dès la réservation.</li>
+              <li>Partenaire des plus grands chaînes hôtelières du monde.</li>
+            </ul>
+            <p><strong>En 10 ans, et en s'appuyant sur sa plateforme technique, Grand Luxury est devenu le 2<sup>ème</sup> apporteur d'affaires mondial pour les hôtels de Paris, Londres et Milan &mdash; avec seulement 60 salariés.</strong></p>
+            <p><a href="https://www.forbes.fr/luxe/grand-luxury-hotels-une-nouvelle-idee-du-luxe/">Grand Luxury Hotels, une autre idée du luxe</a> (Forbes, août 2017)</p>
+            <p><a href="https://fr.grandluxuryhotels.com">Visiter Grand Luxury Hotels</a></p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Fermer</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
 
 <hr class="separator" id="social">
 
@@ -234,7 +271,8 @@ A mettre :
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
 
 <script>
   var $header = $('#header'),
@@ -357,26 +395,6 @@ A mettre :
         $('.nav-menu-btn').removeClass('active');
         $('.nav-menu').hide();
       }
-    });
-
-    // Popovers and tooltips
-    $('#glg-details').popover({
-      placement: 'top',
-      trigger: 'hover focus',
-      html: true,
-      width: 300,
-      content:
-        "Crée en 2007, Grand Luxury Group est le spécialiste européen du voyage de luxe sur internet."
-        + "<p></p>"
-        + "<ul>"
-        + "  <li>Les plus beaux hôtels du monde, triés sur le volet.</li>"
-        + "  <li>Un service personnalisé via un conseiller dédié.</li>"
-        + "  <li>Des avantages exclusifs pour les membres du L Club.</li>"
-        + "  <li>Un suivi attentif de chaque client dès la réservation.</li>"
-        + "  <li>Partenaire des plus grands chaînes hôtelières du monde.</li>"
-        + "</ul>"
-        + "<p></p>"
-        + "<a href=\"https://www.grandluxuryhotels.com\">Visiter le site &raquo;</a>"
     });
 
   });
